// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project metadata renders correctly with no references 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Stars
            </span>
            : 
            123
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Watchers
            </span>
            : 
            0
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Open Issues
            </span>
            : 
            56
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Contributors
            </span>
            : 
            45
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Created
            </span>
            : 
            2023-01-01
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Last Commit
            </span>
            : 
            2023-03-14
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              License
            </span>
            : 
            MIT
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Top Programming Language
            </span>
            : 
            Python
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Stars
          </span>
          : 
          123
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Watchers
          </span>
          : 
          0
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Open Issues
          </span>
          : 
          56
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Contributors
          </span>
          : 
          45
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Created
          </span>
          : 
          2023-01-01
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Last Commit
          </span>
          : 
          2023-03-14
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            License
          </span>
          : 
          MIT
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Top Programming Language
          </span>
          : 
          Python
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Project metadata renders correctly with references 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Stars
            </span>
            : 
            123
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Watchers
            </span>
            : 
            0
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              References
            </span>
            : 
            76
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Open Issues
            </span>
            : 
            56
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Contributors
            </span>
            : 
            45
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Created
            </span>
            : 
            2023-01-01
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Last Commit
            </span>
            : 
            2023-03-14
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              License
            </span>
            : 
            MIT
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span
              class="css-1kzx35s-emph"
            >
              Top Programming Language
            </span>
            : 
            Python
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Stars
          </span>
          : 
          123
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Watchers
          </span>
          : 
          0
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            References
          </span>
          : 
          76
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Open Issues
          </span>
          : 
          56
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Contributors
          </span>
          : 
          45
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Created
          </span>
          : 
          2023-01-01
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Last Commit
          </span>
          : 
          2023-03-14
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            License
          </span>
          : 
          MIT
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span
            class="css-1kzx35s-emph"
          >
            Top Programming Language
          </span>
          : 
          Python
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
